--- a/calculator.html
+++ b/calculator.html
@@ -1,3 +1,9 @@
+<!-- My awful HTML Pseudo
+
+Step 1: Map out rows/columns for calculator buttons. 
+Step 2: Assign each button their value.
+Step 3: Add an input line for the values to appear e.g the screen. -->
+
 <link rel="stylesheet" href="calculator.css">
 
 <div class="container">
