--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ Step 1: Map out rows/columns for calculator buttons.
 Step 2: Assign each button their value.
 Step 3: Add an input line for the values to appear e.g the screen. -->
 
-<link rel="stylesheet" href="calculator.css">
+<link rel="stylesheet" href="index.css">
 
 <div class="container">
   <div class="calculator">
@@ -32,4 +32,5 @@ Step 3: Add an input line for the values to appear e.g the screen. -->
   </div>
 </div>
 
-<script src="calculator.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+<script type="text/javascript" src="index.js"></script>
